[package]
name = "update-ssh-keys"
version = "0.1.2"
authors = ["Stephen Demos <stephen.demos@coreos.com>"]

[dependencies]
clap = "2.26"
error-chain = { version = "0.12", default-features = false }
fs2 = "0.4"
openssh-keys = "0.2"
users = "0.6"

[[bin]]
name = "update-ssh-keys"
path = "src/main.rs"
doc = false

[lib]
path = "src/lib.rs"
doc = true

[profile.release]
lto = true
