[package]
name = "update-ssh-keys"
authors = [ "Stephen Demos <stephen.demos@coreos.com>",
            "Luca Bruno <lucab@debian.org>" ]
license = "Apache-2.0"
repository = "https://github.com/coreos/update-ssh-keys"
documentation = "https://docs.rs/update-ssh-keys"
description = "A tool for managing authorized SSH keys"
version = "0.3.0-alpha.0"

[dependencies]
clap = "2.26"
error-chain = { version = "0.12", default-features = false }
fs2 = "0.4"
openssh-keys = "0.3"
users = "0.6"

[[bin]]
name = "update-ssh-keys"
path = "src/main.rs"
doc = false

[lib]
path = "src/lib.rs"
doc = true

[profile.release]
lto = true

[package.metadata.release]
sign-commit = true
upload-doc = false
disable-push = true
disable-publish = true
pre-release-commit-message = "cargo: update-ssh-keys release {{version}}"
pro-release-commit-message = "cargo: version bump to {{version}}"
tag-message = "update-ssh-keys v{{version}}"
tag-prefix = "v"
