[package]
name = "update-ssh-keys"
authors = [ "Stephen Demos <stephen.demos@coreos.com>",
            "Luca Bruno <lucab@debian.org>" ]
license = "Apache-2.0"
repository = "https://github.com/coreos/update-ssh-keys"
documentation = "https://docs.rs/update-ssh-keys"
description = "A tool for managing authorized SSH keys"
version = "0.5.1-alpha.0"

[dependencies]
# Private dependencies.
clap = "2.33"
fs2 = "0.4"
# Public dependencies, exposed through library API.
error-chain = { version = "0.12", default-features = false }
openssh-keys = "0.4"
users = "0.10"

[[bin]]
name = "update-ssh-keys"
path = "src/main.rs"
doc = false

[lib]
path = "src/lib.rs"
doc = true

[profile.release]
lto = true

[package.metadata.release]
sign-commit = true
disable-push = true
disable-publish = true
pre-release-commit-message = "cargo: update-ssh-keys release {{version}}"
pro-release-commit-message = "cargo: development version bump"
tag-message = "update-ssh-keys v{{version}}"
